[package]
name = "snowflake-adbc-driver-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
adbc_core = { git = "https://github.com/Pranav2612000/arrow-adbc", directory = "rust/core", rev = "d0d2c9447cb658468567a84c6be99e185b44507b" }
adbc_driver_manager = { git = "https://github.com/Pranav2612000/arrow-adbc", directory = "rust/driver_manager", rev = "d0d2c9447cb658468567a84c6be99e185b44507b" }
arrow = { version = "57.0.0", features = ["prettyprint"] }
arrow-array = "57.0.0"
